--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.25.1",
+    "react-hook-form": "^7.26.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/styled-components": "^5.1.21",
     "@types/uuid": "^8.3.4"
   }
