--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,17 @@
         "es2021": true
     },
     "extends": [
-        "react-app",
-        "react-app/jest",
-        "plugin:import/typescript",
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
+        "prettier"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -20,18 +24,17 @@
         "sourceType": "module",
         "project": "./tsconfig.json"
     },
-    "plugins": ["react", "@typescript-eslint", "prettier"],
+    "plugins": ["react", "@typescript-eslint"],
     "rules": {
-        "linebreak-style": "off",
-        "import/prefer-default-export": "off",
-        "indent": "off",
-        "@typescript-eslint/indent": ["error", 4],
-        "prettier/prettier": [
-            "warn",
-            {
-                "singleQuote": true,
-                "printWidth": 120
-            }
-        ]
+        "react/react-in-jsx-scope": "off",
+        "no-shadow": "error",
+        "prefer-const": "warn",
+        "@typescript-eslint/prefer-readonly": "off",
+        "@typescript-eslint/no-implicit-any-catch": "warn",
+        "@typescript-eslint/no-unsafe-call": "warn",
+        "@typescript-eslint/no-unsafe-return": "warn",
+        "@typescript-eslint/no-unnecessary-type-assertion": "warn",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-unused-expressions": "off"
     }
 }
