--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sectios-demo",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "src/packages/**"
+  ],
   "dependencies": {
     "@fluentui/react": "^8.51.1",
     "@hookform/resolvers": "^2.8.8",
@@ -17,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
