--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,8 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended",
-        "prettier"
+        "plugin:prettier/recommended"
+        // "prettier"
     ],
     "settings": {
         "react": {
