--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,9 +22,11 @@
         },
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.json",
+        "exclude": ["api"]
     },
     "plugins": ["react", "@typescript-eslint"],
+    "ignorePatterns": ["api/index.js"],
     "rules": {
         "react/react-in-jsx-scope": "off",
         "no-shadow": "error",
