--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@xstate/react": "^3.0.1",
+    "axios": "^1.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
