--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
         "project": "./tsconfig.json",
         "exclude": ["api"]
     },
-    "plugins": ["react", "@typescript-eslint"],
+    "plugins": ["react", "@typescript-eslint", "unused-imports"],
     "ignorePatterns": ["api/index.js"],
     "rules": {
         "react/react-in-jsx-scope": "off",
@@ -37,6 +37,7 @@
         "@typescript-eslint/no-unsafe-return": "warn",
         "@typescript-eslint/no-unnecessary-type-assertion": "warn",
         "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-unused-expressions": "off"
+        "@typescript-eslint/no-unused-expressions": "warn",
+        "unused-imports/no-unused-imports": "warn"
     }
 }
