--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "check:circular-deps": "madge --warning --circular --extensions ts,tsx src",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "api": "json-server api/index.js --port 3004 --routes api/routes.json"
+    "api": "json-server --port 3004 --routes api/routes.json --watch api/mocks/db.json"
   },
   "eslintConfig": {
     "extends": [
@@ -105,6 +105,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.0",
     "madge": "^5.0.1",
     "prettier": "^2.7.1",
