--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "dependencies": {
     "@fluentui/react": "^8.51.1",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
