--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-beforeunload": "^2.5.3",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
