--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@xstate/react": "^3.0.1",
     "axios": "^1.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-beforeunload": "^2.5.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.26.1",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.3",
@@ -44,6 +43,11 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "api": "json-server --port 3004 --routes api/routes.json --watch api/mocks/db.json"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -75,19 +79,21 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/node-logger": "^6.5.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/node-logger": "^6.5.15",
     "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.178",
     "@types/react-beforeunload": "^2.1.1",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21",
     "@types/uuid": "^8.3.4",
@@ -107,13 +113,15 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-storybook": "^0.6.8",
     "eslint-plugin-unused-imports": "^2.0.0",
     "flush-promises": "^1.0.2",
     "husky": "^7.0.0",
     "madge": "^5.0.1",
+    "msw": "^0.49.2",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.4",
     "webpack": "^5.74.0"
   }
